Package: async
==============

Version: 0.4.1-9000 [2015-06-14]
o CLEANUP: BatchJobsAsyncTask no longer registers/submits jobs.
o Added run() for BatchJobsAsyncTask.
o CLEANUP: Dropped async() - now batchjobs().
o CLEANUP: Dropped makeClusterFunctionsRscript().
o CLEANUP: Dropped delayed assignment %<-% infix operator.


Version: 0.4.1 [2015-06-14]
o Add batchjobs() allowing for plan(batchjobs, backend="multicore").
o BatchJobsAsyncTask() and internal tempRegistry() gained
  argument 'backend'.


Version: 0.4.0 [2015-06-08]
o CLEANUP: Extract Future API and moved to new package 'future'.
o Now delayedAsyncAssign() returns a Future.
o BUG FIX: The existance of .BatchJobs.R would override
  whatever backend was already set by backend().
o BUG FIX: Asynchroneous evaluation of { a <<- 1 } no longer
  identifies 'a' as a global variable that needs to be exported.


Version: 0.3.1 [2015-05-23]
o CLEANUP: Moved more internal code to the 'listenv' package.


Version: 0.3.0 [2015-05-21]
o Now inspect(envir=x) returns all tasks if only the environment
  is specified, e.g. inspect(envir=x) vs inspect(x$a).
o Added completed() and failed(), expired().
o Any flavor of backend("multicore") is based on availableCores().
o Added availableCores() for identifying the number of available cores.
  The default is to acknowledged the assigned number of cores by
  queing systems such as Torque/PBS, before using detectCores() of
  the 'parallel' package.
o CLEANUP: Moved identification of globals to new 'globals' package.
o CLEANUP: Moved list environments to new 'listenv' package.
o ROBUSTNESS: Asynchroneous tasks that still run when R exists
  will not be stopped and not deleted.  This will allow the tasks
  running on job clusters to complete.
o BUG FIX: AsyncTask objects were not assigned to the listenv.


Version: 0.2.0 [2015-05-11]
o Functions AsyncTask() and delayedAsyncAssign() gained argument
  'substitute' for controlling whether the expression/value