@@ -34,7 +34,6 @@ export(AsyncTask)
 export(AsyncTaskError)
 export(BatchJobsAsyncTask)
 export(asyncBatchEvalQ)
-export(asyncEvalQ)
 export(availableCores)
 export(await)
 export(backend)
@@ -76,7 +75,6 @@ importFrom(R.utils,printf)
 importFrom(R.utils,tempvar)
 importFrom(R.utils,use)
 importFrom(future,Future)
-importFrom(future,futureAssign)
 importFrom(future,futureOf)
 importFrom(future,resolved)
 importFrom(future,value)
@@ -84,7 +82,6 @@ importFrom(globals,as.Globals)
 importFrom(globals,cleanup)
 importFrom(globals,globalsOf)
 importFrom(globals,packagesOf)
-importFrom(listenv,get_variable)
 importFrom(listenv,listenv)
 importFrom(parallel,detectCores)
 importFrom(tools,file_path_as_absolute)
